Added RSA signing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 application.signKey=abcde
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:mysql://localhost/sign
+spring.datasource.username=root
+spring.datasource.password=
