--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,9 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter')
 	compile('org.springframework.boot:spring-boot-starter-web')
+	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('commons-codec:commons-codec')
+	compile('org.springframework.security:spring-security-crypto')
+	runtime('mysql:mysql-connector-java')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
